force-app/main/default/objects/hero_page__c/hero_page__c.object-meta.xml
<CustomObject>
    <label>Hero Page</label>
    <nameField>
        <label>Hero Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hero Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>