force-app/main/default/objects/hero_page__c/fields/image_path__c.field-meta.xml
<CustomField>
    <fullName>image_path__c</fullName>
    <label>Image</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>