force-app/main/default/objects/hero_page__c/fields/page_route__c.field-meta.xml
<CustomField>
    <fullName>page_route__c</fullName>
    <label>Page Route</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>