force-app/main/default/objects/hero_page__c/fields/sub_title__c.field-meta.xml
<CustomField>
    <fullName>sub_title__c</fullName>
    <label>Sub Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>